# multi-agent-document-intelligence

./: .env.example  .gitignore  AGENT_SLIDES_SUMMARY.md  AGENT_WORKFLOW.MD  CODEBASE_FILE_MAP.md  CONCISE_WORKFLOW.md  DETAILED_WORKFLOW.md  MULTI_AGENT_EVALUATION_GUIDE.md  README.md  README_vi.md  SLIDE_WORKFLOW.md  main.py  pyproject.toml
core/: pipeline.py
core/agents/: __init__.py  base_agent.py  extractor.py  file_locator.py  file_organizer.py  keyword_extractor.py  planner.py  reviewer.py  synthesizer.py  task_router.py
core/chains/: __init__.py  prompting.py
core/config/: settings.py
core/exceptions/: agent_errors.py
core/graphs/: __init__.py  organize_graph.py  qa_graph.py  state.py
core/parsers/: data_types.py  file_router.py  table_extractor.py  text_extractor.py  vision_extractor.py
core/prompts/: extraction_prompts.py  locator_prompts.py  organizer_prompts.py  router_prompts.py  (+3 more)
data/: dump.json  task_dump.json
dataProvider/: __init__.py
evaluation/: README.md  __init__.py  agent_evaluators.py  dataset_loader.py  e2e_evaluators.py  evaluator_schemas.py  judge_client.py  judge_prompts.py  phoenix_config.py  run_agent_task.py  run_experiment.py
logs/: local_submissions.jsonl  test_pipeline_20260409_054735.txt  test_pipeline_20260409_055206.txt  test_pipeline_20260409_195151.txt
tests/: test_agents.py  test_api.py  test_data_pipeline.py  test_evaluation_pipeline.py  test_flow_organization.py  test_flow_qa.py  test_image_excel_handling.py  test_langgraph_refactor.py  test_logger.py  test_parsers.py  test_pipeline.py  test_workflows_offline.py
(+14 files in other folders)
