[project]
name = "ocr-multi-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "google-genai>=1.53.0",
    "langchain-core>=1.4.8",
    "langgraph>=1.2.7",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "pytest>=9.0.3",
    "python-docx>=1.2.0",
    "tabulate>=0.10.0",
    "tenacity>=9.1.4",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
